tests/regression/pr36/illegal_decl.expected
File "tests/regression/pr36/illegal_decl.smt2", line 2, character 0-27:
Error Illegal declaration. Hint: check your logic
