tests/regression/pr36/illegal_decl.smt2
(set-logic QF_AX)
(declare-fun f (Bool) Bool)
(check-sat)
(exit)
